# NACA_Wing_Creator

./: .gitignore  .pylintrc  NACA_Wing_Creator.code-workspace  NACA_Wing_Generator.code-workspace  README.md  USAGE.md  example_plot.py  naca.ms  naca.py  pyproject.toml  test_naca.py
.ipynb_checkpoints/: naca-checkpoint.py
source/: example_plot.py  naca.py
source/tests/: test_naca.py
