[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "naca-wing-creator"
version = "1.0.0"
description = "NACA 4-digit and 5-digit airfoil profile generator"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Jeff Hanna"},
]
dependencies = [
    "numpy",
]

[project.urls]
Repository = "https://github.com/JeffHanna/NACA_Wing_Creator"

[tool.setuptools]
py-modules = ["naca"]
